--- a/src/spreadsheet_component.html
+++ b/src/spreadsheet_component.html
@@ -10,17 +10,7 @@
   </div>
 </div>
 
-<script nonce="{{@csp_nonce}}" src="https://cdn.jsdelivr.net/npm/@univerjs/umd@0.2.14/lib/univer.full.umd.js"></script>
-<script nonce="{{@csp_nonce}}" src="https://cdn.jsdelivr.net/npm/@univerjs/umd@0.2.14/lib/locale/en-US.js"></script>
-<style>
-  @import url(https://cdn.jsdelivr.net/npm/@univerjs/umd@0.2.14/lib/univer.min.css);
-  @media (min-width: 768px) {
-    .sqlpage_spreadsheet {
-      margin: 0 -2rem;
-      width: calc(100% + 4rem);
-    }
-  }
-</style>
+<style>@import url("./style.css");</style>
 
 <div id="_sqlpage_spreadsheet_univer_{{@component_index}}" class="sqlpage_spreadsheet" style="height: 80vh">
   <div class="d-flex justify-content-center h-100 align-items-center">
