add csp nonce when needed

--- a/src/spreadsheet_component.html
+++ b/src/spreadsheet_component.html
@@ -54,4 +54,4 @@ data-cells="
   </div>
 </div>
 
-<script type="module" nonce="{{@csp_nonce}}" src="./spreadsheet.ts"></script>
+<script nonce="{{@csp_nonce}}" type="module" src="./spreadsheet.ts"></script>
